feat(instructions): add cross-refs, OWASP standards, idempotency patterns, memory optimization, CSS guidance, and migration examples
- Add 'See Also' cross-references to all 61 instruction files linking related topics
- Add OWASP Top 10 (2021) alignment tables to all 5 security instruction files
- Add idempotency patterns with language-specific code examples to all 5 messaging files
- Add memory management patterns (ArrayPool, sync.Pool, __slots__, etc.) to all 5 performance files
- Add CSS Modules, theming, and responsive pattern guidance to TypeScript frontend file
- Add EF Core and DbUp migration strategy to .NET database instruction file